Auto stash before merge of "master" and "origin/master"

--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -11,6 +11,7 @@
 
   <ol>
     <li><a target="_blank" href="./dist/index.html">Главная</a></li>
+    <li><a target="_blank" href="./dist/index-v2.html">Главная - new 12.2020</a></li>
   </ol>
   
   <style>
