--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -11,7 +11,8 @@
 
   <ol>
     <li><a target="_blank" href="./dist/index.html">Главная</a></li>
-    <li><a target="_blank" href="./dist/index-v2.html">Главная - new 12.2020</a></li>
+    <li><a target="_blank" href="./dist/index-v2.html">Главная - 12.2020</a></li>
+    <li><a target="_blank" href="./dist/index-v3.html">Главная - 01.2021</a></li>
   </ol>
   
   <style>
